fixed the next button alignment issue

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -109,6 +109,8 @@ $space-yellow: #ffb74d;
 
   &__button {
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
   }
 }
 
